--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  background-color: white;
+  font-family: "Fredoka", sans-serif;
+}
+
+.heading{
+  font-size: 4rem;
+  font-weight: 700;
   text-align: center;
+  color: #4D6986;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subHeading{
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+  color: #73879c;
+  margin-top: 4px;
+  margin-bottom: 10px;
 }
